--- a/client/templates/client/user_dashboard.html
+++ b/client/templates/client/user_dashboard.html
@@ -244,6 +244,7 @@
   $("[id^=activar_]").click(function(){
 
     console.log( $(this)[0].id );
+    $('#transmisores').html("CARGANDO...");
 
     var project_selected_ID =  $(this)[0].id;
 
@@ -262,8 +263,6 @@
 
     $("#activar_"+_proyID).addClass('btn-info');
     $("#activar_"+_proyID).html('Activo');
-
-
 
     getArduinosFromProject( _proyID );
   });
@@ -471,13 +470,26 @@
   }
 
   function convertEpoch2Date(epochData){
+
     if(parseInt(epochData)>10000){
+      var actualDate = new Date();
+      var actualHours = actualDate.getHours();
+
       var d = new Date(parseInt(epochData)*1000);
       var day =  d.getUTCDate() +'';
       var month =  d.getUTCMonth() + 1 +'';
       var hour    = d.getUTCHours() +'';
-      var minutes = d.getUTCMinutes()+'';;
-      var seconds = d.getUTCSeconds()+'';;
+
+      if(parseInt(hour) > parseInt(actualHours)){
+        if(parseInt(hour) < 5){
+          var dif = hour - 5;
+          hour = 24 - dif;
+        }else{
+          hour = hour - 5;
+        }
+      }
+      var minutes = d.getUTCMinutes()+'';
+      var seconds = d.getUTCSeconds()+'';
 
       //NO me gusta... pero no se me ocurre otra forma...
       if(day.length == 1)
