--- a/templates/main_header.html
+++ b/templates/main_header.html
@@ -376,7 +376,7 @@
     <div class="pull-right hidden-xs">
       <b>Version</b> 0.0.1
     </div>
-    <strong>Copyright &copy; 2015-2016 LOS AMOS DEL UNIVERSO.</strong> All rights reserved.
+    <strong> ADU Panthea </strong> Todos los Derechos Reservados ® 2015-2016
   </footer>
 
 {% endblock %}
