--- a/dashboard/templates/admin/admin_projects_create.html
+++ b/dashboard/templates/admin/admin_projects_create.html
@@ -14,18 +14,6 @@
          - PROYECTO
         <small>Proyectos</small>
       </h1>
-      <ol class="breadcrumb">
-        <li>
-          <a href="#">
-            <i class="fa fa-dashboard"></i>
-            Home</a>
-        </li>
-        <li class="active">
-          <a href="#" target="_self">
-            Lista de Proyectos
-          </a>
-        </li>
-      </ol>
     </section>
 
     <!-- Main content -->
@@ -34,7 +22,7 @@
     <div class="col-xs-12">
       <div class="box box-primary">
         <div class="box-header with-border">
-          <h3 class="box-title">Formulario para Proyectos</h3>
+          <h3 class="box-title">Alta de Proyectos</h3>
         </div><!-- /.box-header -->
 
         <!-- form start -->
@@ -58,7 +46,7 @@
         <!-- /.box-body -->
         <div class="box-footer">
           <a href="{% url 'projectsList' %}" class="btn btn-default">Regresar</a>
-          <button type="submit" class="btn btn-primary">{% if form.initial %}Editar {% else %}Agregar {% endif %} Cliente</button>
+          <button type="submit" class="btn btn-primary">{% if form.initial %}Editar {% else %}Crear {% endif %} Proyecto</button>
         </div>
         <!-- /.box-footer -->
         </form>
