--- a/dashboard/templates/admin/admin_projects_detail.html
+++ b/dashboard/templates/admin/admin_projects_detail.html
@@ -9,24 +9,16 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        ADMIN - PROYECTO -  DETALLE -  {{project.name }}
+        ADMIN - DETALLE DEL PROYECTO: <b> {{project.name }}</b>
         <small>LISTA DE SISTEMAS EN EL PROYECTO</small>
 
       </h1>
-      <ol class="breadcrumb">
-        <li>
-          <a href="#">
-            <i class="fa fa-dashboard"></i>
-            Home</a>
-        </li>
-        <li class="active">Dashboard</li>
-      </ol>
     </section>
 
     <!-- Main content -->
 <section class="content">
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-5">
 
       <div class="box box-solid">
         <div class="box-header with-border">
@@ -37,15 +29,11 @@
           <dl class="dl-horizontal">
             <dt>Proyecto</dt>
             <dd>
-              <a href="#" target="_self">
                 {{project.name }}
-              </a>
             </dd>
             <dt>ID Proyecto</dt>
             <dd>
-              <a href="#" target="_self">
-                {{project.id }}
-              </a>
+                Proyecto00{{project.id }}
             </dd>
             <dt># de Sistemas instalados</dt>
             <dd>{{project.arduinos.count }}</dd>
@@ -62,36 +50,28 @@
   <div class="col-xs-12">
     <div class="box">
       <div class="box-header">
-        <h3 class="box-title">Lista d Sistemas Instalados</h3>
+        <h3 class="box-title">Lista de Sistemas Instalados</h3>
       </div><!-- /.box-header -->
       <div class="box-body">
         <table id="table_projects" class="table table-bordered table-striped">
           <thead>
             <tr>
-              <th>ID Sistema</th>
+              <th>Sistema ID</th>
               <th>Nombre Sistema </th>
               <th>Ubicación</th>
-              <th>Fecha Creación</th>
               <th>Estatus</th>
-              <th>Acciones</th>
+              <th align="center">Acciones</th>
             </tr>
           </thead>
           <tbody>
             {% for arduino in arduinos %}
             <tr>
 
-              <td>{{arduino.id}}</td>
+              <td>Sistema00{{arduino.id}}</td>
               <td>{{arduino.name}}</td>
               <td>{{arduino.location}}</td>
-              <td>{{arduino.created_at}}</td>
-
-              {% if  arduino.id|isEven == 0%}
-                <td> <span class="label label-danger">Pendiente</span> </td>
-              {% else %}
-                <td> <span class="label label-success">Correcto</span> </td>
-              {% endif %}
-
-              <td>
+              <td>{{arduino.get_estatus_display}}</td>
+              <td align="center">
                 <div class="btn-group">
                   <a href="{% url 'adminArduinoDetail' pk=arduino.id %}" target="_self">
                     <button  type="button" class="btn btn-success">Ver</button>
@@ -108,23 +88,13 @@
             </tr>
             {% endfor %}
           </tbody>
-
-          <tfoot>
-            <tr>
-              <th>ID Sistema</th>
-              <th>Nombre Sistema </th>
-              <th>Ubicación</th>
-              <th>Fecha Creación</th>
-              <th>Estatus</th>
-              <th>Acciones</th>
-            </tr>
-          </tfoot>
         </table>
       </div><!-- /.box-body -->
     </div><!-- /.box -->
   </div>
 </div>
 
+{% comment %}
 <div class="row">
   <div class="col-xs-12">
     <div class="box">
@@ -134,6 +104,7 @@
     </div>
   </div>
 </div>
+{% endcomment %}
 
 <!-- /.END PARA LOS ARDUINOS DEL PROYECTO -->
   </section>
@@ -151,11 +122,11 @@
 
   $(function () {
     $('#table_projects').DataTable({
-      "paging": true,
+      "paging": false,
       "lengthChange": false,
-      "searching": true,
-      "ordering": true,
-      "info": true,
+      "searching": false,
+      "ordering": false,
+      "info": false,
       "autoWidth": false
     });
   });
