--- a/templates/main_header.html
+++ b/templates/main_header.html
@@ -300,14 +300,14 @@
         <li class="treeview">
           <a href="#">
             <i class="fa fa-laptop"></i>
-            <span>EMPRESAS & CLIENTES</span>
+            <span>CLIENTES & USUARIOS</span>
             <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu" style="display: none;">
-            <li><a href="{% url 'enterprise-client:enterprise-list' %}"><i class="fa fa-laptop"></i> <span>Lista de Empresas</span></a></li>
-            <li><a href="{% url 'enterprise-client:client-list' %}"><i class="fa fa-laptop"></i> <span>Lista de Clientes</span></a></li>
+            <li><a href="{% url 'enterprise-client:enterprise-list' %}"><i class="fa fa-laptop"></i> <span>Lista de Clientes</span></a></li>
+            <li><a href="{% url 'enterprise-client:client-list' %}"><i class="fa fa-laptop"></i> <span>Lista de Usuarios</span></a></li>
             <li><a href="{% url 'enterprise-client:client-add' %}"><i class="fa fa-laptop"></i> <span>Agregar Cliente</span></a></li>
-            <li><a href="{% url 'enterprise-client:enterprise-add' %}"><i class="fa fa-laptop"></i> <span>Agregar Empresa</span></a></li>
+            <li><a href="{% url 'enterprise-client:enterprise-add' %}"><i class="fa fa-laptop"></i> <span>Agregar Cliente</span></a></li>
           </ul>
         </li>
 
