FRONT - Comment right bar ... I forgot removed.

--- a/templates/main_header.html
+++ b/templates/main_header.html
@@ -387,6 +387,7 @@
 
 
 {% block main_rigth_menu %}
+  {% comment %}
       <!-- Control Sidebar -->
       <aside class="control-sidebar control-sidebar-dark">
         <!-- Create the tabs -->
@@ -552,4 +553,5 @@
       <!-- Add the sidebar's background. This div must be placed
            immediately after the control sidebar -->
       <div class="control-sidebar-bg"></div>
+      {% endcomment %}
 {% endblock main_rigth_menu %}
