--- a/client/templates/client/user_dashboard.html
+++ b/client/templates/client/user_dashboard.html
@@ -42,6 +42,11 @@
           <h3 class="box-title">
             Ver otros Proyectos
           </h3>
+          <div class="box-tools pull-right">
+            <button class="btn btn-box-tool" data-widget="collapse">
+              <i class="fa fa-minus"></i>
+            </button>
+          </div>
         </div>
         <!-- /.box-header -->
 
@@ -65,7 +70,7 @@
                   </td>
                   <td>
                     {{project.name}}
-                  </td>
+                </td>
                   <td>
                     {{project.arduinos.count}}
                   </td>
@@ -361,6 +366,11 @@
                     '<b>Transmisor:</b>  '+data[i].name+
                     ' - <span id="epoch_'+data[i].sensors[1].id+'"> -  Ultima actualización: </span>'+
                   '</h3>'+
+                  '<div class="box-tools pull-right">'+
+                    '<button class="btn btn-box-tool" data-widget="collapse">'+
+                      '<i class="fa fa-minus"></i>'+
+                    '</button>'+
+                  '</div>'+
                 '</div>'+
                 '<div class="box-body">'+
                   '<div class="col-xs-12">'+
@@ -405,7 +415,7 @@
 
 
 
-  function getSensorsFromAPI(proy_ID,sensor_ID, arduinoID,sens_info,query){
+function getSensorsFromAPI(proy_ID,sensor_ID, arduinoID,sens_info,query){
 
     var passData_proyectID  = proy_ID;
     var passData_sensorID   = sensor_ID;
@@ -451,7 +461,7 @@
 
     if( data[0] !== undefined){
       var passData_sensID     = sensID;
-      
+
       if(sensInfo.data_key != 'field1'){
         //console.log(data);
         var passData_proyectID  = proy_ID;
